# Diplomado

./: Readme.MD  pyproject.toml
Código/: Carga_SECOP.ipynb  TallerDimensionales.ipynb  app2.py  taller_seguridad.db  transformacion.py
