[project]
name = "código"
version = "0.0.1"
description = "Primer proyecto del diplomado"
authors = [
    {name = "Laura",email = "lauratorresgiraldo@usantotomas.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
